# SalesOS

./: .env.example  .gitignore  .gitmodules  PRODUCT_BIBLE.md  RUNBOOK.md  SALESOS_ARCHITECTURE_AUDIT.md  SALESOS_COMPLETE_AUDIT_AND_ROADMAP.md  SALESOS_OPERATING_PLAN.md  SALESOS_PRODUCTION_READINESS_AUDIT.md  SALESOS_REMEDIATION_BACKLOG.md  SALESOS_REVISED_ROADMAP.md  SALESOS_V1_ENTERPRISE_RELEASE_READINESS.md  add_batch1_data.py  analyze_source.py  build_tier1_li_output.py  check_batch.py  check_coverage.py  check_csv_months.py  check_dates.py  check_licenses.py  check_notion.py  check_output.py  check_tier1_gaps.py  companies.json  create_output_schema.py  crm_audit.py  crm_enrichment.py  crm_pipeline.py  debug_failed.py  docker-compose.yml  extract_companies.py  finalize_enrichment.py  import_to_notion.py  list_companies.py  list_tier1_missing_li.py  list_tier1_status.py  muhide_3version_comparative_report.md  muhide_comparative_analysis_report.md  muhide_pitch_deck_analysis_report.md  notion_analysis.md  (+14 more)
salesos/backend/: .dockerignore  .env.production.template  Dockerfile  Dockerfile.backend  Dockerfile.test  README.md  alembic.ini  conftest.py  docker-entrypoint.sh  pyproject.toml  test_reg.py  test_store.py  tmp_e2e_error.txt  tmp_test.py
salesos/backend/app/: cache.py  celery_app.py  config.py  database.py  dependencies.py  main.py  tasks.py
salesos/backend/app/alembic/: env.py
salesos/backend/app/common/: api_key_manager.py  cache.py  exceptions.py  logging_config.py  metrics.py  middleware.py  models.py  rate_limit.py  redis_client.py  schemas.py  validation.py
salesos/backend/app/metrics/: __init__.py  collector.py  sla_monitor.py
salesos/backend/app/routers/: admin_demo.py  ai.py  analytics.py  benchmarks.py  commercial.py  copilot.py  demo.py  enrichment.py  mcp.py  meetings.py  metrics.py  notifications.py  opportunities.py  rag.py  revenue.py  search.py  workflows.py
salesos/backend/arch_tests/: test_architecture.py
salesos/backend/benchmark/: __init__.py  data_generator.py  queries.py  reporter.py  run.py  runner.py
salesos/backend/benchmarks/: __init__.py  __main__.py  api_benchmark.py  cli.py  dashboard_benchmark.py  nba_benchmark.py  rag_benchmark.py  report.html  report_template.html  runner.py  search_benchmark.py
salesos/backend/benchmarks/results/: 04e7a0f4.json  07b7e4ec.json  0f918677.json  1802f686.json  255414ea.json  28df7c52.json  2c3f3b53.json  3299eedf.json  365d915a.json  39a80a93.json  3f84bb0f.json  46deeca2.json  51f2d8e8.json  5a4ec9ed.json  6b4c383f.json  6d2ea1c0.json  760d947d.json  77986fcf.json  7ad78903.json  7c24bbf9.json  7e235988.json  b37e2325.json  b4fea7a4.json  c247a06e.json  c41d3e01.json  eb8adf9d.json  eee28b5b.json  f5251278.json  fa297d25.json
salesos/backend/demo/: __init__.py  demo_data_generator.py  pilot_data.json  pilot_seed.py  prod_audit.py  reset.py  seed_data.py  seed_graph.py
salesos/backend/demo/scenarios/: __init__.py  company_research.py  enterprise_deal.py  pipeline_review.py  runner.py
salesos/backend/design_tokens/: __init__.py
salesos/backend/docs/: ENRICH_OPTIMIZATION.md  SEARCH_OPTIMIZATION.sql
salesos/backend/docs/adr/: 0021-ubom.md  0022-widget-driven-experience.md  0023-schema-driven-experience.md  0024-product-layer-freeze.md  0025-entity-resolution.md  0026-hybrid-search.md  0027-feature-store.md  0028-knowledge-graph-integration.md
salesos/backend/docs/wave-2/: 11-API_REFERENCE.md
salesos/backend/domains/: __init__.py
salesos/backend/domains/ai/: __init__.py  evaluator.py  models.py  registry.py  schemas.py  service.py
salesos/backend/domains/analytics/: __init__.py  cubes.py  engine.py  (+3 more)
salesos/backend/intelligence/: __init__.py  agent_base.py  cost_tracker.py  grounding.py  guardrails.py  reasoning.py  schemas.py
salesos/backend/mcp_server/: README.md  resources.py  salesos_client.py  server.py  tools.py
salesos/backend/migrations/: 001_initial.sql  003_revenue_analytics.sql  004_workflow.sql  005_notifications.sql
salesos/backend/modules/: __init__.py  registry.py
salesos/backend/pipeline/: excel_utils.py  validation_engine.py
salesos/backend/runtime/: __init__.py  admin_router.py  object_viewer.py
salesos/backend/sdk/: __init__.py  audit.py  cache.py  capability_registry.py  config.py  database.py  exceptions.py  feature_registry.py  graph.py  metadata.py  permissions.py  queue.py  search.py  security.py  telemetry.py  vector.py
salesos/backend/tests/: conftest.py  fakes.py  test_architecture.py  test_dashboard_mappers.py  test_executive_service.py  test_health.py  test_integration.py  test_search_runtime.py
(+1523 files in other folders)
