[tool.poetry]
name = "salesos-backend"
version = "0.1.0"
description = "SalesOS Enterprise Company Intelligence Platform - Backend"
authors = ["SalesOS Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
alembic = "^1.13"
pydantic = "^2.7"
pydantic-settings = "^2.2"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
bcrypt = ">=4.0,<4.1"
python-multipart = "^0.0.9"
openpyxl = "^3.1"
httpx = "^0.27"
aiokafka = "^0.10"
redis = "^5.0"
neo4j = "^5.20"
sentry-sdk = {extras = ["fastapi"], version = "^2.0"}
python-dotenv = "^1.0"
openai = "^1.30"
opentelemetry-api = "^1.25"
opentelemetry-sdk = "^1.25"
opentelemetry-exporter-otlp-proto-http = "^1.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"
asyncpg-stubs = "^0.29"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["app/", "sdk/", "modules/", "cli/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app/modules/identity/tests", "app/modules/company/tests", "app/modules/entity_resolution/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
